--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-type-animation": "^3.2.0",
     "swiper": "^12.0.3"
